modify river carving